--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8e114a37",
    "metadata": {
@@ -127,13 +128,14 @@
    "outputs": [],
    "source": [
     "# Importing Data\n",
-    "df_train = pd.read_csv(current_dir + '/dataset.csv')\n",
     "dscr = open(current_dir + '/data_description.txt')\n",
     "dscr = dscr.read()\n",
+    "df_train = pd.read_csv(current_dir + '/dataset.csv')\n",
     "df = df_train"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "150d505f",
    "metadata": {
@@ -161,6 +163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6047e41",
    "metadata": {},
@@ -602,6 +605,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "33e1c3f1",
    "metadata": {},
@@ -1159,6 +1163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8670a7b",
    "metadata": {},
@@ -1275,6 +1280,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "789645de",
    "metadata": {},
@@ -1379,6 +1385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fbb8db8f",
    "metadata": {
@@ -1396,6 +1403,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e444b688",
    "metadata": {
@@ -1449,6 +1457,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc2b2cbc",
    "metadata": {
@@ -1466,6 +1475,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b55a3fbd",
    "metadata": {
@@ -1483,6 +1493,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bab6da29",
    "metadata": {
@@ -1556,6 +1567,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6769a841",
    "metadata": {
@@ -1573,6 +1585,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31d43edf",
    "metadata": {
@@ -1590,6 +1603,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f204c5f9",
    "metadata": {
@@ -1607,6 +1621,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "013be656",
    "metadata": {
@@ -1650,6 +1665,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d56b7c2",
    "metadata": {
@@ -1693,6 +1709,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f93c85d",
    "metadata": {
@@ -1736,6 +1753,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20741e3a",
    "metadata": {
@@ -1779,6 +1797,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c165c64f",
    "metadata": {
@@ -1822,6 +1841,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e76f7b3",
    "metadata": {
@@ -1866,6 +1886,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8ed6bdf",
    "metadata": {
@@ -1910,6 +1931,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed9e3b57",
    "metadata": {
@@ -1996,6 +2018,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0aae2ee9",
    "metadata": {
@@ -2013,6 +2036,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "77643411",
    "metadata": {
@@ -2030,6 +2054,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b92808d",
    "metadata": {
@@ -2074,6 +2099,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d6be1bb2",
    "metadata": {
@@ -2117,6 +2143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "43e976f5",
    "metadata": {
@@ -2221,6 +2248,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "98308421",
    "metadata": {
@@ -2238,6 +2266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5e6d256f",
    "metadata": {
@@ -2255,6 +2284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e15a5b64",
    "metadata": {
@@ -2401,6 +2431,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8bd323bb",
    "metadata": {
@@ -2418,6 +2449,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "efe2ee17",
    "metadata": {
@@ -2687,6 +2719,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f555baf3",
    "metadata": {
@@ -2704,6 +2737,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa342a91",
    "metadata": {
@@ -2723,6 +2757,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db4481a0",
    "metadata": {
@@ -3032,6 +3067,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d7448cb8",
    "metadata": {
@@ -3049,6 +3085,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fd808d56",
    "metadata": {
@@ -3417,6 +3454,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dfbae397",
    "metadata": {
@@ -3471,6 +3509,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "80c93e6e",
    "metadata": {
@@ -3514,6 +3553,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5eb4be4f",
    "metadata": {
@@ -3568,6 +3608,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6408dd96",
    "metadata": {
@@ -3622,6 +3663,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "43b11a62",
    "metadata": {
@@ -3833,6 +3875,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b05ae00",
    "metadata": {
@@ -3850,6 +3893,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "737d707d",
    "metadata": {
@@ -4059,6 +4103,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce9a39aa",
    "metadata": {
@@ -4076,6 +4121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "060a1b29",
    "metadata": {
@@ -4230,6 +4276,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e819b42e",
    "metadata": {
@@ -4247,6 +4294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0bf2b0ca",
    "metadata": {
@@ -4287,6 +4335,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c6232d8",
    "metadata": {
@@ -4373,6 +4422,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ba7649a",
    "metadata": {
@@ -4391,6 +4441,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23762a5d",
    "metadata": {
@@ -4446,6 +4497,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5c1fb4e2",
    "metadata": {
@@ -4697,6 +4749,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2abf43db",
    "metadata": {
@@ -4822,6 +4875,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5456df70",
    "metadata": {
@@ -4925,6 +4979,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a3059915",
    "metadata": {
@@ -4968,6 +5023,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "903378eb",
    "metadata": {
@@ -5166,6 +5222,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38e3f9ab",
    "metadata": {
@@ -5187,6 +5244,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad15748f",
    "metadata": {
@@ -5238,6 +5296,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "015c9fcf",
    "metadata": {
@@ -5255,6 +5314,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2d53f8c",
    "metadata": {
@@ -5288,6 +5348,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f73b3ca",
    "metadata": {
@@ -5925,6 +5986,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0fc3e8dc",
    "metadata": {
@@ -5946,6 +6008,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48a7ef2f",
    "metadata": {
@@ -6087,6 +6150,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e969a953",
    "metadata": {
@@ -6105,6 +6169,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "77a6c837",
    "metadata": {},
@@ -6118,6 +6183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5542255",
    "metadata": {
@@ -7655,6 +7721,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0079d693",
    "metadata": {
@@ -7706,7 +7773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
   "papermill": {
    "default_parameters": {},
