--- a/main.ipynb
+++ b/main.ipynb
@@ -2467,6 +2467,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c47be2ef",
+   "metadata": {},
+   "source": [
+    "### Convert string data to categorical data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "76b292f9",
